# BakerSynthesizerLinux

./: CMakeLists.txt  README.md  clean.sh  demo_github.cpp  demo_github_client_listener.h
include/: base64.h  client_listener.h  pub_headers.h  synthesizer_manager.h  websocket_wrapper.h
include/websocketpp/config/: core_client.hpp
